@@ -1,38 +1,37 @@
 package com.trajan.negentropy.server.task;
 
-import com.trajan.negentropy.server.backend.entity.TaskEntity;
-import com.trajan.negentropy.server.backend.entity.TaskLinkEntity;
 import com.trajan.negentropy.server.backend.TaskEntityQueryService;
-import com.trajan.negentropy.server.facade.TaskQueryService;
-import com.trajan.negentropy.server.facade.TaskUpdateService;
-import com.trajan.negentropy.server.facade.response.LinkResponse;
-import com.trajan.negentropy.server.facade.response.Response;
-import com.trajan.negentropy.server.facade.response.TaskResponse;
-import com.trajan.negentropy.server.facade.model.EntityMapper;
-import com.trajan.negentropy.server.facade.model.Task;
-import com.trajan.negentropy.server.facade.model.TaskLink;
+import com.trajan.negentropy.server.backend.entity.TaskEntity;
+import com.trajan.negentropy.server.backend.entity.TaskLink;
 import com.trajan.negentropy.server.backend.repository.LinkRepository;
 import com.trajan.negentropy.server.backend.repository.TaskRepository;
+import com.trajan.negentropy.server.facade.TaskQueryService;
+import com.trajan.negentropy.server.facade.TaskUpdateService;
+import com.trajan.negentropy.server.facade.model.*;
+import com.trajan.negentropy.server.facade.response.NodeResponse;
+import com.trajan.negentropy.server.facade.response.Response;
+import com.trajan.negentropy.server.facade.response.TaskResponse;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import org.hibernate.Session;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.util.Pair;
 
 import java.sql.Statement;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 @SpringBootTest
 public class TaskUpdateServiceTest {
-    private static final Logger logger = LoggerFactory.getLogger(TaskUpdateServiceTest.class);
 
     @Autowired private TaskUpdateService updateService;
     @Autowired private TaskEntityQueryService entityQueryService;
@@ -45,41 +44,57 @@ public class TaskUpdateServiceTest {
 
     @PersistenceContext private EntityManager entityManager;
 
-    private final Map<String, Task> tasks = new HashMap<>();
+    private Map<String, Task> tasks = new HashMap<>();
+    private final Map<String, TaskEntity> taskEntities = new HashMap<>();
     private final Map<String, TaskLink> links = new HashMap<>();
 
     @BeforeEach
     void setUp() {
         List<String> taskNames = List.of(
-                "One",
-                "Two",
-                "Three",
-                "Four",
-                    "TwoOne",
-                    "TwoTwo",
-                    "TwoThree");
+                "1",
+                "2",
+                "3",
+                "4",
+                    "21",
+                    "22",
+                    "23",
+                        "221",
+                        "222");
 
         // Populate test data
-        List<Task> taskList = taskNames.stream()
-                .map(name -> Task.builder()
-                        .name(name)
-                        .build())
-                .toList();
+        Pair<Map<String, Task>, List<Task>> result = taskNames.stream()
+                .map(name -> new Task(null)
+                        .name(name))
+                .map(task -> updateService.createTask(task).task())
+                .peek(task -> assertNotNull(task.id()))
+                .collect(Collectors.teeing(
+                        Collectors.toMap(
+                                Task::name,
+                                task -> task),
+                        Collectors.toList(),
+                        Pair::of
+                ));
+
+        tasks = result.getFirst();
+        List <Task> taskList = result.getSecond();
 
         for(int i=0; i<4; i++) {
-            logger.debug(i + ": " + taskList.get(i).name());
-            tasks.put(taskList.get(i).name(),
-                    updateService.addTaskAsRoot(taskList.get(i)).child());
+            updateService.insertTaskAsRoot(taskList.get(i).id());
         }
 
-        long taskTwoId = tasks.get("Two").id();
-        for(int i=4; i<taskList.size(); i++) {
-            logger.debug(i + ": " + taskList.get(i).name());
-            tasks.put(taskList.get(i).name(),
-                    updateService.addTaskAsChild(taskTwoId, taskList.get(i)).child());
+        TaskID task2Id = tasks.get("2").id();
+        for(int i=4; i<7; i++) {
+            updateService.insertTaskAsChild(task2Id, taskList.get(i).id());
         }
 
-        tasks.put("Two", queryService.getTask(tasks.get("Two").id()));
+        TaskID task22Id = tasks.get("22").id();
+        for(int i=7; i<9; i++) {
+            updateService.insertTaskAsChild(task22Id, taskList.get(i).id());
+        }
+
+        for(Task task : tasks.values()) {
+            taskEntities.put(task.name(), entityQueryService.getTask(task.id().val()));
+        }
     }
 
     @AfterEach
@@ -100,212 +115,220 @@ public class TaskUpdateServiceTest {
             }
         });
     }
+    
+    private void validateNodes(List<TaskNode> nodes, List<Task> tasks) {
+        TaskID parentId = nodes.get(0).parentId();
+        for (int i=0; i<nodes.size(); i++) {
+            TaskNode node = nodes.get(i);
+            Task task = tasks.get(i);
+            if (parentId != null) {
+                assertEquals(node.position(), i);
+            }
+            assertEquals(task.id(), node.childId());
+            assertEquals(parentId, node.parentId());
+        }
+    }
 
     @Test
-    void testTaskLinkOrder() {
-        Task task2 = tasks.get("Two");
-        Task task21 = tasks.get("TwoOne");
-        Task task22 = tasks.get("TwoTwo");
-        Task task23 = tasks.get("TwoThree");
+    void testTaskLinkOrder() {        
+        List<TaskNode> rootNodes = queryService.getRootNodes();
+        List<Task> rootTasks = List.of(
+                tasks.get("1"),
+                tasks.get("2"),
+                tasks.get("3"),
+                tasks.get("4"));
+        validateNodes(rootNodes, rootTasks);
+        
+        List<TaskNode> task2ChildNodes = queryService.getChildNodes(tasks.get("2").id());
+        List<Task> task2ChildTasks = List.of(
+                tasks.get("21"), 
+                tasks.get("22"), 
+                tasks.get("23"));
+        validateNodes(task2ChildNodes, task2ChildTasks);
 
-        assertEquals(1, task2.parentLinks().size());
-        assertEquals(3, task2.childLinks().size());
-        assertEquals(Arrays.asList(task21.id(), task22.id(), task23.id()),
-                task2.childLinks().stream().map(TaskLink::childId).toList());
-
-        assertEquals(1, task21.parentLinks().size());
-        assertEquals(1, task22.parentLinks().size());
-        assertEquals(1, task23.parentLinks().size());
-
-        List<TaskLinkEntity> links = mapper.toEntity(task2).childLinks();
-        for(int i=0; i<links.size(); i++) {
-            assertEquals(i, links.get(i).position());
-        }
-    }
-
-    void validateLink(List<Task> expectedChildren, Task parent, Task child) {
-        Set<Long> expectedParent = Set.of(parent.id());
-        List<Long> expectedChildIds = expectedChildren.stream().map(Task::id).toList();
-        assertEquals(expectedChildIds, parent.childLinks().stream().map(TaskLink::childId).toList());
-        assertEquals(expectedParent, parent.childLinks().stream().map(TaskLink::parentId).collect(Collectors.toSet()));
-        assertTrue(parent.childLinks().stream().anyMatch(link -> link.parentId().equals(parent.id())));
-    }
-
-    void validateLinkResponse(LinkResponse response, Task origParent, Task origChild) {
-        Task parent = response.parent();
-        Task child = response.child();
-        TaskLink link = response.link();
-
-        assertEquals(parent.id(), origParent.id());
-        assertEquals(parent.id(), link.parentId());
-        assertEquals(child.id(), link.childId());
-        if (origChild.id() != null) {
-            assertEquals(child.id(), origChild.id());
-        }
+        List<TaskNode> task22ChildNodes = queryService.getChildNodes(tasks.get("22").id());
+        List<Task> task22ChildTasks = List.of(
+                tasks.get("221"), 
+                tasks.get("222"));
+        validateNodes(task22ChildNodes, task22ChildTasks);
     }
 
     @Test
     void testSaveTaskAsChild() {
-        Task fresh = Task.builder().name("Fresh").build();
-        Task parent = tasks.get("Two");
+        Task fresh = new Task(null).name("Fresh");
+        Task parent = tasks.get("2");
 
-        LinkResponse response = updateService.addTaskAsChild(parent.id(), fresh);
-        validateLinkResponse(response, parent, fresh);
-        fresh = response.child();
+        fresh = updateService.createTask(fresh).task();
 
-        parent = queryService.getTask(parent.id());
-        List<Long> children = parent.childLinks().stream().map(TaskLink::childId).toList();
-
-        assertEquals(4, children.size());
-        assertEquals(tasks.get("TwoOne").id(), children.get(0));
-        assertEquals(tasks.get("TwoTwo").id(), children.get(1));
-        assertEquals(tasks.get("TwoThree").id(), children.get(2));
-        assertEquals(fresh.id(), children.get(3));
-
-        List<Task> expectedChildren = List.of(tasks.get("TwoOne"), tasks.get("TwoTwo"), tasks.get("TwoThree"), fresh);
-        validateLink(expectedChildren, parent, fresh);
+        NodeResponse response = updateService.insertTaskAsChild(parent.id(), fresh.id());
+        assertTrue(response.success());
+        
+        assertEquals(parent.id(), response.node().parentId());
+        fresh = queryService.getTask(response.node().childId());
+        List<Task> expectedChildTasks = List.of(
+                tasks.get("21"),
+                tasks.get("22"),
+                tasks.get("23"),
+                fresh);
+        validateNodes(
+                queryService.getChildNodes(parent.id()),
+                expectedChildTasks);
     }
 
     @Test
     void testAddTaskAsChildAt() {
-        Task fresh = Task.builder().name("Fresh").build();
-        Task parent = tasks.get("Two");
+        Task fresh = new Task(null).name("Fresh");
+        Task parent = tasks.get("2");
 
-        LinkResponse response = updateService.addTaskAsChildAt(1, parent.id(), fresh);
-        validateLinkResponse(response, parent, fresh);
+        fresh = updateService.createTask(fresh).task();
 
-        parent = queryService.getTask(parent.id());
-        fresh = response.child();
-
-        List<Task> expectedChildren = List.of(tasks.get("TwoOne"), fresh, tasks.get("TwoTwo"), tasks.get("TwoThree"));
-        validateLink(expectedChildren, parent, fresh);
+        NodeResponse response = updateService.insertTaskAsChildAt(1, parent.id(), fresh.id());
+        assertTrue(response.success());
+        
+        assertEquals(parent.id(), response.node().parentId());
+        fresh = queryService.getTask(response.node().childId());
+        List<Task> expectedChildTasks = List.of(
+                tasks.get("21"),
+                fresh,
+                tasks.get("22"),
+                tasks.get("23"));
+        validateNodes(
+                queryService.getChildNodes(parent.id()),
+                expectedChildTasks);
     }
 
     @Test
     void testSaveTaskAsRoot() {
-        Task fresh = Task.builder().name("Fresh").build();
+        Task f = new Task(null).name("Fresh");
 
-        LinkResponse response = updateService.addTaskAsRoot(fresh);
-        fresh = response.child();
+        Task fresh = updateService.createTask(f).task();
 
-        assertEquals("Fresh", fresh.name());
-        assertFalse(fresh.parentLinks().isEmpty());
-        assertTrue(fresh.childLinks().isEmpty());
+        NodeResponse response = updateService.insertTaskAsRoot(fresh.id());
+
+        assertNull(response.node().parentId());
+        
+        assertTrue(queryService.getRootNodes().stream()
+                .anyMatch(node -> 
+                        node.childId().equals(fresh.id())));
     }
 
     @Test
     void testUpdateTask() {
-        Task task = tasks.get("One");
+        Task task = tasks.get("1");
         task.name("Updated");
 
         TaskResponse response = updateService.updateTask(task);
-
+        assertTrue(response.success());
+        
         Task updatedTask = response.task();
         assertNotNull(updatedTask);
 
         assertEquals("Updated", updatedTask.name());
+        task = queryService.getTask(tasks.get("1").id());
+        assertEquals("Updated", task.name());
     }
 
     @Test
+    @Disabled
     void testDeleteTask() {
-        Task task = tasks.get("Two");
+        Task task = tasks.get("2");
+        
         Response response = updateService.deleteTask(task.id());
-
         assertTrue(response.success());
 
-        TaskEntity deletedTask = taskRepository.findById(task.id()).orElse(null);
+        TaskEntity deletedTask = taskRepository.findById(task.id().val()).orElse(null);
         assertNull(deletedTask);
     }
 
     @Test
     void testDeleteLink() {
-        Task task2 = tasks.get("Two");
-        Task task21 = tasks.get("TwoOne");
-
-        TaskLink link = task21.parentLinks().get(0);
-        LinkResponse r = updateService.deleteLink(link.id());
-
-        assertTrue(r.success());
+        Task task2 = tasks.get("2");
+        Task task21 = tasks.get("21");
+        TaskLink link = taskEntities.get("21").parentLinks().get(0);
+        
+        Response response = updateService.deleteNode(new LinkID(link.id()));
+        assertTrue(response.success());
 
         assertThrows(IllegalArgumentException.class, () -> entityQueryService.getLink(link.id()));
-
-        TaskEntity entity2 = mapper.toEntity(task2);
-        TaskEntity entity21 = mapper.toEntity(task21);
         
-        // Verify task2 no longer has task21 as a child, and vice-versa
-        assertFalse(entity2.children().anyMatch(entity -> entity.equals(entity21)));
-        assertFalse(entity2.childLinks().stream()
-                .map(TaskLinkEntity::child).anyMatch(entity -> entity.equals(entity21)));
-        assertFalse(entity21.parents().anyMatch(entity -> entity.equals(entity2)));
-        assertFalse(entity21.parentLinks().stream()
-                .map(TaskLinkEntity::parent).anyMatch(entity -> entity.equals(entity2)));
+        List<Task> expectedChildTasks = List.of(
+                tasks.get("22"),
+                tasks.get("23"));
+        validateNodes(
+                queryService.getChildNodes(task2.id()),
+                expectedChildTasks);
+        
+        //TODO: Orphaned task cleanup
     }
 
     @Test
     public void testMoveTaskLink() {
-        Task task1 = tasks.get("One");
-        Task task2 = tasks.get("Two");
-        Task task21 = tasks.get("TwoOne");
+        Task task1 = tasks.get("1");
+        Task task2 = tasks.get("2");
+        Task task21 = tasks.get("21");
 
-        TaskLink taskLink3 = task21.parentLinks().get(0);
-        updateService.addTaskAsChild(task1.id(), task21);
-        updateService.deleteLink(taskLink3.id());
+        TaskLink taskLink3 = taskEntities.get("21").parentLinks().get(0);
+        NodeResponse nodeResponse = updateService.insertTaskAsChild(task1.id(), task21.id());
+        Response response = updateService.deleteNode(new LinkID(taskLink3.id()));
 
-        TaskEntity entity1 = mapper.toEntity(task1);
-        TaskEntity entity2 = mapper.toEntity(task2);
-        TaskEntity entity21 = mapper.toEntity(task21);
+        assertTrue(nodeResponse.success());
+        assertTrue(response.success());
+        
+        assertEquals(task1.id(), nodeResponse.node().parentId());
 
-        // Verify that task3 is now a child of task1, and vice-versa
-        assertTrue(entity1.children().anyMatch(entity -> entity.equals(entity21)));
-        assertTrue(entity1.childLinks().stream()
-                .map(TaskLinkEntity::child).anyMatch(entity -> entity.equals(entity21)));
-
-        assertTrue(entity21.parents().anyMatch(entity -> entity.equals(entity1)));
-        assertTrue(entity21.parentLinks().stream()
-                .map(TaskLinkEntity::parent).anyMatch(entity -> entity.equals(entity1)));
-
-        // Verify that task3 is no longer a child of task2
-        assertFalse(entity2.children().anyMatch(entity -> entity.equals(entity21)));
-        assertFalse(entity2.childLinks().stream()
-                .map(TaskLinkEntity::child).anyMatch(entity -> entity.equals(entity21)));
-
-        assertFalse(entity21.parents().anyMatch(entity -> entity.equals(entity2)));
-        assertFalse(entity21.parentLinks().stream()
-                .map(TaskLinkEntity::parent).anyMatch(entity -> entity.equals(entity2)));
+        List<Task> expectedTask1ChildTasks = List.of(
+                tasks.get("21"));
+        validateNodes(
+                queryService.getChildNodes(task1.id()),
+                expectedTask1ChildTasks);
+        
+        List<Task> expectedTask2ChildTasks = List.of(
+                tasks.get("22"),
+                tasks.get("23"));
+        validateNodes(
+                queryService.getChildNodes(task2.id()),
+                expectedTask2ChildTasks);
     }
 
     @Test
     public void testTaskLinkOrderAfterChange() {
-        // Get existing tasks from map
-        Task task4 = tasks.get("Four");
-        Task task21 = tasks.get("TwoOne");
-        Task task22 = tasks.get("TwoTwo");
-        Task task3 = tasks.get("Three");
+        Task task4 = tasks.get("4");
+        Task task21 = tasks.get("21");
+        Task task22 = tasks.get("22");
+        Task task3 = tasks.get("3");
 
-        LinkResponse r21 = updateService.addTaskAsChild(task4.id(), task21);
-        LinkResponse r22 = updateService.addTaskAsChild(task4.id(), task22);
-        LinkResponse r3 = updateService.addTaskAsChildAt(r22.link().position(), task4.id(), task3);
+        NodeResponse r21 = updateService.insertTaskAsChild(task4.id(), task21.id());
+        NodeResponse r22 = updateService.insertTaskAsChild(task4.id(), task22.id());
+        NodeResponse r3 = updateService.insertTaskAsChildAt(r22.node().position(), task4.id(), task3.id());
 
-        task21 = r21.child();
-        task22 = r22.child();
-        task3 = r3.child();
-        assertEquals(r21.parent(), r22.parent());
-        assertEquals(r22.parent(), r3.parent());
-
-        task4 = queryService.getTask(task4.id());
-        assertEquals(task4, r3.parent());
-
-        assertEquals(3, task4.childLinks().size());
-        List<Task> expectedChildren = Arrays.asList(task21, task3, task22);
-        validateLink(expectedChildren, task4, task21);
-        validateLink(expectedChildren, task4, task3);
-        validateLink(expectedChildren, task4, task22);
-
-        List<TaskLink> links = task4.childLinks();
-        for(int i=0; i<links.size(); i++) {
-            assertEquals(i, links.get(i).position());
-        }
+        assertTrue(r21.success());
+        assertTrue(r22.success());
+        assertTrue(r3.success());
+        
+        List<Task> expectedChildren = List.of(
+                tasks.get("21"),
+                tasks.get("3"),
+                tasks.get("22"));
+        validateNodes(
+                queryService.getChildNodes(task4.id()),
+                expectedChildren);
     }
 
+    @Test
+    public void testCyclicalConnection() {
+        Task task2 = tasks.get("2");
+        Task task222 = tasks.get("222");
+
+        NodeResponse response = updateService.insertTaskAsChild(task222.id(), task2.id());
+        assertFalse(response.success());
+    }
+
+    @Test
+    public void testAddToSelf() {
+        Task task2 = tasks.get("2");
+
+        NodeResponse response = updateService.insertTaskAsChild(task2.id(), task2.id());
+        assertFalse(response.success());
+    }
 
 }
